<resources>
    <string name="app_name">Loopr Wallet</string>
    <string name="title_activity_settings">Settings</string>
    <string name="ask">Ask:</string>
    <string name="bid">Bid:</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed to scan QR codes</string>
    <string name="no_camera_permission">The QR code scanner cannot run because this app does not have the camera permission. The camera will now close.</string>
    <string name="low_storage_error">QR Code Scanner cannot be downloaded due to low device storage</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="markets">Markets</string>
    <string name="orders">Orders</string>
    <string name="my_wallet">My Wallet</string>
    <string name="option_reselected">Reselected!</string>
    <string name="change_node">Change Node</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="transfer">Transfer</string>
    <string name="trading_pair">Trading Pair</string>
    <string name="welcome">Welcome</string>
    <string name="unlock_device">You must unlock your device to access this app</string>
    <string name="exit_app">Exit App?</string>
    <string name="exit_app_rationale">Are you sure you want to exit the app? Your progress will be lost</string>
    <string name="exit">Exit</string>
    <string name="market_price">Market Price</string>
    <string name="estimated_cost">Estimated Cost</string>
    <string name="order_summary">Order Summary</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="wallet_information">Wallet Information</string>
    <string name="your_address">Your Address:</string>
    <string name="content_description_copy_address">Allows you to copy your address to the clipboard</string>
    <string name="unlock_to_reveal_private_key">Unlock to Reveal Private Key</string>
    <string name="reveal_private_key">Reveal Private Key</string>
    <string name="account_balances">Account Balances</string>
    <string name="content_description_share_address">Share your address</string>
    <string name="content_description_reveal_private_key">Temporarily Reveal your Private Key</string>
    <string name="content_description_download_keystore">Download the keystore file for backup</string>
    <string name="view_all_tokens">View All Tokens</string>
    <string name="content_description_send_ether_or_tokens">Send Ether or tokens to another address</string>
    <string name="ellipsis">.....</string>
    <string name="content_description_trading_pair_image">The logo for this cryptocurrency</string>
    <string name="letter_b">B</string>
    <string name="letter_s">S</string>
    <string name="share_your_address">Share your address</string>
    <string name="statistics">Statistics</string>
    <string name="current">Current</string>
    <string name="volume">Volume</string>
    <string name="market_cap">Market Cap</string>
    <string name="today_open">Today\'s Open</string>
    <string name="today_low">Today\'s Low</string>
    <string name="today_high">Today\'s High</string>
    <string name="qr_code_scanner_instructions">Tap to capture. Pinch to zoom</string>
    <string name="formatter_is_an_invalid_address">%s is an invalid address</string>
    <string name="error_starting_camera">There was an error starting the camera</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="use_max">Use Max</string>
    <string name="send">Send</string>
    <string name="content_description_send_swap">Swaps the input to be in terms of tokens instead of currency</string>
    <string name="recipient_address">Recipient Address</string>
    <string name="contact_address">Contact Address</string>
    <string name="content_description_qrcode_scanner">Scan the recipient\'s address via barcode</string>
    <string name="_continue">Continue</string>
    <string name="number_of"># of</string>
    <string name="contact_name">Contact Name</string>
    <string name="contacts_and_transfers"><![CDATA[Contacts & Transfers]]></string>
    <string name="show_transfers">Show Transfers</string>
    <string name="start_a_transfer">Start a Transfer</string>
    <string name="content_description_receive">You have received a token or Ether</string>
    <string name="date">Date</string>
    <string name="transaction">Transaction</string>
    <string name="transfers">Transfers</string>
    <string name="default_transaction">0x925d6cd0b5cfb0bd6f549482c6dde00bb0be14578cfd8edc8fd29ea4085327a6</string>
    <string name="status">Status</string>
    <string name="complete">Complete</string>
    <string name="view_in_explorer">View in Explorer</string>
    <string name="pending">Pending</string>
    <string name="create_new_wallet">Create New Wallet</string>
    <string name="restore_existing_wallet">Restore Existing Wallet</string>
    <string name="content_description_app_icon">The application\'s logo</string>
    <string name="question_restore_wallet">How would you like to restore your wallet?</string>
    <string name="key_file">Key File</string>
    <string name="underscore">_</string>
    <string name="security_unlock_with_pin">Unlock with your PIN</string>
    <string name="content_description_pin_circle">A circle which represents your PIN being inputted</string>
    <string name="content_description_bottom_navigation_image">A tab that allows you to navigate to different parts of the application</string>
    <string name="enter_your_private_key">Enter your Private Key</string>
    <string name="rationale_enter_private_key">Make sure you\'re in a safe environment, and no one looking over your shoulder</string>
    <string name="private_key">Private Key</string>
    <string name="unlock">Unlock</string>
    <string name="select_keystore_file_enter_password">Select your Keystore File and Enter your Password</string>
    <string name="select_keystore_file">Select Keystore File</string>
    <string name="password">Password</string>
    <string name="content_description_password_toggle">Press to show or hide your password</string>
    <string name="content_description_reorder_mnemonic_phrase">Reorder the word to a different position</string>
    <string name="add">Add</string>
    <string name="submit_phrase">Submit Phrase</string>
    <string name="word">Word</string>
    <string name="your_12_words">Your 12 Words</string>
    <string name="unlock_wallet">Unlock Wallet</string>
    <string name="create_with_keystore">Create with Keystore</string>
    <string name="create_with_phrase">Create with Phrase</string>
    <string name="content_description_keystore">Provides a helpful description of what a keystore is</string>
    <string name="content_description_phrase">Provides a helpful description of what a phrase is</string>
    <string name="enter_a_strong_password">Enter a Strong Password</string>
    <string name="enter_old_password">Enter Your Old Password</string>
    <string name="safety_description_password">Remember to keep your password and keystore safe. You will need both your password and the keystore file in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you!</string>
    <string name="safety_create_phrase">Remember to keep your password and phrase safe. You will need your password and the 12-word phrase in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you! By pressing \"Generate Phrase\", you will be taken to the next screen with your 12-word phrase. Keep it safe and make sure no one is looking over your shoulder.</string>
    <string name="safety_recover_phrase">Remember to keep your password and phrase safe. You will need your password and the 12-word phrase in order to unlock your wallet or recover it in the future. You are solely responsible for managing your credentials. We do not backup your credentials for you! Keep your information safe and make sure no one is looking over your shoulder.</string>
    <string name="backup_your_credentials">Backup your Credentials</string>
    <string name="create_wallet">Create Wallet</string>
    <string name="safety_confirm_password">By pressing \"confirm\", you acknowledge that you read and understood the disclaimer and will keep your credentials safe. Treat them with care, because they may be responsible for guarding your riches one day.</string>
    <string name="confirm_your_password">Confirm your Password</string>
    <string name="enter_wallet_name">Enter your Wallet\'s Name</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="generate_phrase">Generate Phrase</string>
    <string name="confirm_phrase">Confirm Phrase</string>
    <string name="your_12_word_phrase">Your 12-Word Phrase</string>
    <string name="about_this_step">About this Step</string>
    <string name="about_remember_phrase">This 12-word phrase is used to recover and unlock your wallet. It must be used with the password you provided earlier. By pressing \"Confirm Phrase\" you will be taken to the next screen to reenter these 12 words.</string>
    <string name="help_recycler_empty_phrase">To enter a word type a word in the box below and press \"Add\". You will be able to submit them after entering all 12 words.\n\nTo reorder a word, hold the reorder icon on the right and drag it. To delete a word, swipe it to the right.</string>
    <string name="content_description_navigation_icon">This button allows you to navigate back to the most recent screen you were on</string>
    <string name="error_password_required">You must enter a password</string>
    <string name="error_wallet_name_required">You must enter a wallet name</string>
    <string name="error_contact_name_required">You must enter a contact name</string>
    <string name="error_wallet_name_bad_format">The wallet must start with a letter or number and can only contain letters, numbers, spaces, dashes, (-), and underscores (_)</string>
    <string name="error_contact_name_bad_format">The name must start with a letter or number and can only contain letters, numbers, spaces, dashes, (-), and underscores (_)</string>
    <string name="error_wallet_name_too_short">The wallet name should be at least 3 characters long</string>
    <string name="error_wallet_name_too_long">The wallet name cannot be longer than 255 characters</string>
    <string name="error_contact_name_too_long">The contact name cannot be longer than 255 characters</string>
    <string name="error_password_too_short">Your password must be at least 9 characters long</string>
    <string name="error_too_long">This field is too long</string>
    <string name="confirm">Confirm</string>
    <string name="description_keystore_download">The keystore file to unlock your wallet named %s</string>
    <string name="twelve_word_phrase">12-Word Phrase</string>
    <string name="error_retrieve_file">An unknown error occurred retrieving your file</string>
    <string name="title_select_keystore_file">Select your Keystore File</string>
    <string name="error_install_file_manager">To select your keystore file, install a File Manager</string>
    <string name="restore_wallet">Restore Wallet</string>
</resources>