<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/standard_padding">

        <include layout="@layout/app_logo_container" />

        <android.support.v7.widget.CardView
            style="@style/App.Card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_small"
                    android:text="@string/enter_your_private_key"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_small"
                    android:text="@string/rationale_enter_private_key"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subtitle" />

                <EditText
                    android:id="@+id/fragmentRestorePrivateKeyEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_large"
                    android:hint="@string/private_key"
                    android:inputType="textMultiLine" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/fragmentRestorePrivateKeyUnlockButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:text="@string/unlock" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>