<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="@dimen/standard_padding">

    <include layout="@layout/app_logo_container" />

    <android.support.v7.widget.CardView
        style="@style/CardStyle.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_large">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question_restore_wallet"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <Button
                android:id="@+id/restoreWalletKeyFileButton"
                style="@style/ButtonStyle.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:text="@string/key_file" />

            <Button
                android:id="@+id/restoreWalletPrivateKeyButton"
                style="@style/ButtonStyle.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_small"
                android:text="@string/private_key" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>