<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="@dimen/standard_padding">

            <include layout="@layout/card_wallet_name" />

            <android.support.v7.widget.CardView
                style="@style/App.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin_large">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/vertical_margin"
                        android:layout_marginTop="@dimen/vertical_margin_small"
                        android:text="@string/select_keystore_file_enter_password"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <Button
                        android:id="@+id/keystoreSelectFileButton"
                        style="@style/App.Button.CardFlat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_margin_small"
                        android:text="@string/select_keystore_file" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/keystorePasswordInputLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/vertical_margin"
                        app:errorEnabled="true"
                        app:passwordToggleContentDescription="@string/content_description_password_toggle"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/keystorePasswordEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/keystoreUnlockButton"
                style="@style/App.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:enabled="false"
                android:text="@string/unlock" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>