<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/standard_vertical_padding"
    tools:showIn="@layout/fragment_my_wallet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            style="@style/App.Card.PrimaryContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contacts_and_transfers" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/vertical_margin"
                android:clipToPadding="false"
                android:orientation="vertical">

                <Button
                    android:id="@+id/showTransfersButton"
                    style="@style/App.Button.CardFlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_transfers" />

                <Button
                    android:id="@+id/createTransfersButton"
                    style="@style/App.Button.CardFlat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/vertical_margin_small"
                    android:text="@string/start_a_transfer" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:background="?attr/dividerColor" />

        <LinearLayout
            style="@style/App.Card.ActionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/addContactButton"
                style="@style/Button.CardAction"
                android:contentDescription="@string/content_description_send_ether_or_tokens"
                android:src="@drawable/ic_person_add_white_24dp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>